{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 420,
  "lineage": "7300b709-1e00-6c54-f106-ce149ca86d45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7379fbe4fcc0400",
            "arn": "arn:aws:ec2:eu-west-2:388603775717:instance/i-0ea7893656ef6fa5a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea7893656ef6fa5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074504cafd1368534",
            "private_dns": "ip-10-0-1-108.eu-west-2.compute.internal",
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-18-132-210-232.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.210.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9580fd0a58404c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bb8060c13c4cf4d",
            "tags": {
              "Name": "Ghost-Maker-instance"
            },
            "tags_all": {
              "Name": "Ghost-Maker-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bfbfcc2f6f946ebf"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "data.aws_ami.ubuntu",
            "data.template_file.user-data-script"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:388603775717:internet-gateway/igw-02ff7b03bed1e52d3",
            "id": "igw-02ff7b03bed1e52d3",
            "owner_id": "388603775717",
            "tags": {
              "Environment": "prod",
              "Name": "aws-ig-created-with-terraform"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aws-ig-created-with-terraform"
            },
            "vpc_id": "vpc-0464c186fdd7f2ec8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:388603775717:route-table/rtb-0bdfde31ffa24fae0",
            "id": "rtb-0bdfde31ffa24fae0",
            "owner_id": "388603775717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ff7b03bed1e52d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0464c186fdd7f2ec8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02398f852897d4315",
            "route_table_id": "rtb-0bdfde31ffa24fae0",
            "subnet_id": "subnet-05bb8060c13c4cf4d"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:388603775717:security-group/sg-0bfbfcc2f6f946ebf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfbfcc2f6f946ebf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2368,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2368
              }
            ],
            "name": "SG-created-with-terraform",
            "name_prefix": "",
            "owner_id": "388603775717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-created-with-terraform"
            },
            "tags_all": {
              "Name": "SG-created-with-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0464c186fdd7f2ec8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:388603775717:subnet/subnet-05bb8060c13c4cf4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bb8060c13c4cf4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388603775717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-created-with-terraform"
            },
            "tags_all": {
              "Name": "subnet-created-with-terraform"
            },
            "vpc_id": "vpc-0464c186fdd7f2ec8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:388603775717:vpc/vpc-0464c186fdd7f2ec8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049b334ae61a74339",
            "default_route_table_id": "rtb-0865acb8cf96417a4",
            "default_security_group_id": "sg-06dcb37f84682daf2",
            "dhcp_options_id": "dopt-013200acca6033f6d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0464c186fdd7f2ec8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0865acb8cf96417a4",
            "owner_id": "388603775717",
            "tags": {
              "Name": "Ghost-VPC-created-with-terraform"
            },
            "tags_all": {
              "Name": "Ghost-VPC-created-with-terraform"
            }
          }
        }
      ]
    }
  ]
}